crates/mir/filetests/tests/invalid_programs/jump_to_entry_block.mir
// @harness parser_roundtrip
// @harness cfg_integrity_validation_fails
(mir
    (func foo
        (return_type int)
        (entry block0)
        (block block0
            (jump (block1 ())))
        (block block1
            (jump (block0 ())))))